// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSplitPanel accepts panel props 1`] = `
<div
  class="euiPanel euiPanel--primary euiSplitPanel emotion-euiPanel-m-primary-euiSplitPanelOuter-column"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--success euiPanel--paddingMedium euiSplitPanel__inner testClass1 testClass2 emotion-euiPanel-grow-none-m-success-euiSplitPanelInner-euiTestCss"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`EuiSplitPanel inner children are rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-column"
>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  />
</div>
`;

exports[`EuiSplitPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiSplitPanel testClass1 testClass2 emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-column-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiSplitPanel renders as row 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-row"
/>
`;

exports[`EuiSplitPanel responsive can be changed to different breakpoints 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-column"
/>
`;

exports[`EuiSplitPanel responsive can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-column"
/>
`;

exports[`EuiSplitPanel responsive is rendered at small screens 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-column"
/>
`;
